--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Chapter 3",
+  "name": "EPFL Astrophysics I : Chapter 3",
   "icons": [
     {
       "src": "favicon.ico",
