Add GA tracking. Update manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chapter 3",
-  "name": "EPFL Astrophysics I : Chapter 3",
+  "name": "EPFL Astrophysics I - Chapter 3",
   "icons": [
     {
       "src": "favicon.ico",
